--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -11,14 +11,6 @@ main {
     margin-top: 50px;
 }
 
-.container {
-    display: grid;
-    grid-template: 1fr/1fr 1fr;
-    justify-self: center;
-    justify-content: space-around;
-    width: 60%;
-}
-
 .left-box {
     grid-row: 1;
     grid-column: 1;
@@ -30,22 +22,15 @@ main {
     background: #fff;
 }
 
-.right-box {
-    grid-row: 1;
-    grid-column: 2;
-    justify-self: center;
-    border: 2px solid pink;
-}
-
-#image {
-    width: 70%;
-    height: 70%;
-}
-
 footer {
-    display: block;
-    align-content: center;
-    position: absolute;
-    padding-bottom: 40px;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
+    padding-top: 80px;
+}
+
+#copyright {
+    text-align: center;
+    height: 15%;
+    width: 18%;
+    margin: auto;
 }
